# mvp-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude-progress.txt  issue_139.md  pyproject.toml
.claude/: settings.local.json
.codex/: mr-flow-and-approvals.md
.github/workflows/: ci.yml
.trellis/: .template-hashes.json  config.yaml  workflow.md  worktree.yaml
.trellis/scripts/: add_session.py  create_bootstrap.py  task.py
apps/agent/: orchestrator.py
artifacts/: PRD.md  PROJECT_FACT.md
artifacts/modelling/: MODELLING_CHECKLIST.md  TODO.md  alert_scoring.md  backlog.json  citation_contract.md  data_model.md  decision_record_schema.md  pipeline.md  source_registry.yaml
artifacts/runtime/: daily_brief_fixture_payloads.json  v1_active_sources.yaml
docs/: status-matrix.md
docs/adr/: 2026-04-01-market-intelligence-pipeline-redesign.md
docs/plans/: 2026-02-19-decision-record-schema-design.md  2026-02-19-decision-record-schema-implementation-plan.md  2026-02-19-incremental-mcp-adoption-plan.md  2026-02-19-modelling-phase-next-plan.md  2026-03-09-m001-orchestrator-design.md  2026-03-09-m001-orchestrator-implementation-plan.md  2026-03-10-issue-33-source-subset-design.md  2026-03-10-issue-33-source-subset-implementation-plan.md  2026-03-10-issue-35-eval-harness-design.md  2026-03-10-issue-35-eval-harness-implementation-plan.md  2026-03-10-issue-36-daily-brief-vertical-slice-design.md  2026-03-10-issue-36-daily-brief-vertical-slice-implementation-plan.md  2026-03-10-issue-41-evidence-pack-design.md  2026-03-10-issue-41-evidence-pack-implementation-plan.md  2026-03-10-m002-ingestion-design.md  2026-03-10-m002-ingestion-implementation-plan.md  2026-03-10-m003-retrieval-design.md  2026-03-10-m003-retrieval-implementation-plan.md  2026-03-10-m004-postprocess-design.md  2026-03-10-m004-postprocess-implementation-plan.md  2026-03-10-trellis-sync-implementation-plan.md  2026-03-11-daily-brief-issue-centric-design.md  2026-03-11-daily-brief-issue-centric-implementation-plan.md  2026-03-12-brief-editorial-planner-design.md  2026-03-12-claim-delta-and-publish-gate-design.md  2026-03-12-codex-oauth-provider-implementation-plan.md  2026-03-12-codex-oauth-provider-redesign-design.md  2026-03-12-daily-brief-model-layer-redesign-design.md  2026-03-12-daily-brief-model-layer-redesign-implementation-plan.md  2026-03-13-daily-brief-integrity-implementation-plan.md  2026-03-13-daily-brief-integrity-issue-mapping.md  2026-03-14-daily-brief-integrity-agent-rollout-design.md  2026-03-14-daily-brief-integrity-agent-rollout-implementation-plan.md  2026-03-14-post-open-issue-triage.md  (+10 more)
evals/: README.md  run_eval_suite.py
scripts/: run_daily_brief.py  run_daily_brief_fixture.py  validate_artifacts.py  validate_decision_record_schema.py
tools/: __init__.py
(+165 files in other folders)
