[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-agent"
version = "0.1.0"
description = "Local-first financial news and macro literature-review assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=2,<3",
  "PyYAML==6.0.2",
  "pypdf>=5,<6",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "ruff>=0.9,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/agent/daily_brief/test_runner.py" = ["E501"]
"tests/agent/test_validate_artifacts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["apps"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.setuptools.packages.find]
include = ["apps*", "tools*"]
exclude = ["artifacts*", "evals*", "tests*"]
namespaces = true
